--- a/app/src/main/res/layout/activity_screen_info.xml
+++ b/app/src/main/res/layout/activity_screen_info.xml
@@ -37,7 +37,16 @@
         android:id="@+id/view_os"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:titleText="@string/os" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="25dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="25dp"
+        android:paddingRight="20dp"
+        app:titleText="@string/os"
+        tools:valueText="Android 5.1" />
 
     <com.smartstudio.deviceinfo.ui.CustomView
         android:id="@+id/view_screen_res"
