--- a/app/src/main/res/layout/activity_screen_info.xml
+++ b/app/src/main/res/layout/activity_screen_info.xml
@@ -27,40 +27,32 @@
         android:layout_height="?actionBarSize"
         android:background="@color/colorPrimary" />
 
-    <com.smartstudio.deviceinfo.ui.CustomView
+    <com.smartstudio.deviceinfo.ui.PropertyLayout
         android:id="@+id/view_device_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:titleText="@string/device" />
 
-    <com.smartstudio.deviceinfo.ui.CustomView
+    <com.smartstudio.deviceinfo.ui.PropertyLayout
         android:id="@+id/view_os"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="25dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="25dp"
-        android:paddingRight="20dp"
         app:titleText="@string/os"
         tools:valueText="Android 5.1" />
 
-    <com.smartstudio.deviceinfo.ui.CustomView
+    <com.smartstudio.deviceinfo.ui.PropertyLayout
         android:id="@+id/view_screen_res"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:titleText="@string/screen_info" />
 
-    <com.smartstudio.deviceinfo.ui.CustomView
+    <com.smartstudio.deviceinfo.ui.PropertyLayout
         android:id="@+id/view_screen_status"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:titleText="@string/status_bar_height" />
 
-    <com.smartstudio.deviceinfo.ui.CustomView
+    <com.smartstudio.deviceinfo.ui.PropertyLayout
         android:id="@+id/view_screen_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
