--- a/app/src/main/res/layout/view_property.xml
+++ b/app/src/main/res/layout/view_property.xml
@@ -18,11 +18,9 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_red_dark" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_red_dark" />
+        android:layout_height="wrap_content" />
 </merge>
