--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -17,10 +17,16 @@
 <resources>
 
     <declare-styleable name="PropertyView">
-        <attr name="titleText" format="string" />
-        <attr name="titleColor" format="color" />
-        <attr name="valueText" format="string" />
-        <attr name="valueColor" format="color" />
+        <attr name="title_text" format="string" />
+        <attr name="title_color" format="color" />
+        <attr name="value_text" format="string" />
+        <attr name="value_color" format="color" />
+    </declare-styleable>
+
+    <declare-styleable name="TitleTextView">
+        <attr name="indicator_color" format="color" />
+        <attr name="indicator_height" format="dimension" />
+        <attr name="indicator_margin" format="dimension" />
     </declare-styleable>
 
 </resources>
