--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,13 @@
     </style>
 
     <style name="ScreenInfoProperty">
-        <item name="android:layout_marginRight">10dp</item>
         <item name="android:layout_marginBottom">10dp</item>
-        <item name="android:layout_marginLeft">10dp</item>
+    </style>
+
+    <style name="ScreenInfoProperty.Title">
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:textStyle">bold|italic</item>
+        <item name="android:textSize">16sp</item>
+        <item name="indicator_color">@android:color/holo_green_dark</item>
     </style>
 </resources>
