--- a/app/src/main/res/layout/view_property.xml
+++ b/app/src/main/res/layout/view_property.xml
@@ -17,11 +17,13 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
-        android:textStyle="bold"
+        android:id="@+id/txt_property_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/txt_property_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </merge>
