--- a/app/src/main/res/drawable/attributions_divider.xml
+++ b/app/src/main/res/drawable/attributions_divider.xml
@@ -14,13 +14,7 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <!--Margins/Padding-->
-    <dimen name="gap_small">5dp</dimen>
-    <dimen name="gap_normal">10dp</dimen>
-    <dimen name="gap_large">15dp</dimen>
-    <dimen name="gap_xlarge">20dp</dimen>
-
-    <dimen name="title_view_indicator">2dp</dimen>
-    <dimen name="title_view_indicator_margin">2dp</dimen>
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <size android:height="1dp" />
+    <solid android:color="@android:color/black" />
+</shape>
