--- a/app/src/main/res/drawable/attributions_divider.xml
+++ b/app/src/main/res/drawable/attributions_divider.xml
@@ -15,6 +15,6 @@
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <size android:height="1dp" />
+    <size android:height="1px" />
     <solid android:color="@android:color/black" />
 </shape>
