--- a/app/src/main/res/menu/menu_settings.xml
+++ b/app/src/main/res/menu/menu_settings.xml
@@ -20,4 +20,9 @@
         android:id="@+id/about"
         android:title="@string/menu_about"
         app:showAsAction="withText" />
+    <item
+        android:id="@+id/share"
+        android:icon="@android:drawable/ic_menu_share"
+        android:title="@string/menu_share"
+        app:showAsAction="ifRoom" />
 </menu>
