DI-31 Implemented battery tab

--- a/app/src/main/res/values/strings_dashboard.xml
+++ b/app/src/main/res/values/strings_dashboard.xml
@@ -17,4 +17,5 @@
 <resources>
     <string name="tab_screen_info">Screen</string>
     <string name="tab_system">System</string>
+    <string name="tab_battery">Battery</string>
 </resources>
