--- a/app/src/main/res/values/strings_battery.xml
+++ b/app/src/main/res/values/strings_battery.xml
@@ -10,24 +10,27 @@
     <string name="battery_voltage">Voltage</string>
 
     <!-- Health -->
-    <string name="battery_good">Good</string>
-    <string name="battery_dead">Dead</string>
-    <string name="battery_cold">Cold</string>
-    <string name="battery_overheat">Overheat</string>
-    <string name="battery_over_voltage">Over voltage</string>
-    <string name="battery_unspecified">Unspecified</string>
+    <string name="battery_health_good">Good</string>
+    <string name="battery_health_dead">Dead</string>
+    <string name="battery_health_cold">Cold</string>
+    <string name="battery_health_overheat">Overheat</string>
+    <string name="battery_health_over_voltage">Over voltage</string>
+    <string name="battery_health_unspecified">Unspecified</string>
+    <string name="battery_health_unknown">Unknown</string>
 
     <!-- Source -->
     <string name="battery_source_battery">Battery</string>
     <string name="battery_source_usb">USB Port</string>
     <string name="battery_source_ac">AC Charger</string>
     <string name="battery_source_wireless">Wireless Charger</string>
+    <string name="battery_source_unknown">Unknown</string>
 
     <!-- Status -->
-    <string name="battery_charging">Charging</string>
-    <string name="battery_discharging">Discharging</string>
-    <string name="battery_full">Full</string>
-    <string name="battery_not_charging">Not charging</string>
+    <string name="battery_status_charging">Charging</string>
+    <string name="battery_status_discharging">Discharging</string>
+    <string name="battery_status_full">Full</string>
+    <string name="battery_status_not_charging">Not charging</string>
+    <string name="battery_status_unknown">Unknown</string>
 
     <string name="share_battery_title">Share battery state</string>
     <string name="share_battery_subject">Battery state</string>
